--- a/_config.next.yml
+++ b/_config.next.yml
@@ -24,7 +24,8 @@ minify: false
 custom_file_path:
   head: source/_data/head.swig
   #header: source/_data/header.swig
-  #sidebar: source/_data/sidebar.swig
+  #
+  sidebar: source/_data/sidebar.swig
   #postMeta: source/_data/post-meta.swig
   postBodyEnd: source/_data/post-body-end.swig
   footer: source/_data/footer.swig
@@ -87,7 +88,7 @@ footer:
 # CC licenses are available in 39 languages, you can find the specific and correct abbreviation you need on https://creativecommons.org
 creative_commons:
   license: by-nc-sa
-  sidebar: True
+  sidebar: false
   post: True
   language: zh-CN
 
