--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,6 +67,8 @@ jobs:
         
     - name: Gererate&deploy
       run: |
+        git config --global user.name "hehysh"
+        git config --global user.email "hehysh@163.com"      
         hexo clean
         hexo g -d
     - name: Bak source
