--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,11 +65,16 @@ jobs:
       run: | # npm ci老出错，不用了，直接用npm install,去你大爷的（暴躁）
         npm install
     
-    - name: Gererate&deploy
+    - name: Before Deploy
       run: |
         cd ..
         pwd
         git config --global user.name "hehysh1"
         git config --global user.email "hehysh1@hotmail.com"      
+        
+    - name: Generate & Deploy
+      run: |
+        npm install -g hexo
         hexo clean
-        hexo g -d
+        hexo g 
+        hexo d
