--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,19 +29,7 @@ jobs:
         mkdir post
         cd post
         pwd
-    - name: Get post part
-      run: | # 复制post
-        cd ..
-        cp -r /home/runner/work/blog-source/blog-source/source/_posts /home/runner/work/blog-source/post
-        
-    - name: Clone Git(cac)
-      run: | # 克隆仙人掌仓库以及文章
-        cd ..
-        git clone https://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@github.com/hehysh1/blog-source.git blog-cactus
-        rm -rf /home/runner/work/blog-source/blog-cactus/source/_posts
-        cp -r /home/runner/work/blog-source/post /home/runner/work/blog-source/blog-cactus/source/_posts
-        cd blog-cactus
-     
+  
     - name: Setup Node # 安装 Node.js
       uses: actions/setup-node@v1
       with:
@@ -53,6 +41,20 @@ jobs:
         npm install hexo-cli -g
         cd blog-cactus
     
+    - name: Get post part
+      run: | # 复制post
+        cd ..
+        cp -r /home/runner/work/blog-source/blog-source/source/_posts /home/runner/work/blog-source/post
+        
+    - name: Clone Git(cac)
+      run: | # 克隆仙人掌仓库以及文章
+        cd ..
+        git clone https://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@github.com/hehysh1/blog-source.git blog-cactus
+        rm -rf /home/runner/work/blog-source/blog-cactus/source/_posts
+        cp -r /home/runner/work/blog-source/post /home/runner/work/blog-source/blog-cactus/source/_posts
+        rm -rf /home/runner/work/blog-source/blog-cactus/source/
+        cd blog-cactus
+           
     - name: Cache Modules # 缓存 Node 插件
       uses: actions/cache@v1
       id: cache-modules
@@ -64,17 +66,18 @@ jobs:
       if: steps.cache-modules.outputs.cache-hit != 'true'
       run: | # npm ci老出错，不用了，直接用npm install,去你大爷的（暴躁）
         npm install
-    
-    - name: Before Deploy
-      run: |
+          
+    - name: Before Deploy #准备工作
+      run: | 
         cd ..
         pwd
         git config --global user.name "hehysh1"
         git config --global user.email "hehysh1@hotmail.com"      
         
-    - name: Generate & Deploy
+    - name: Generate & Deploy #部署
       run: |
         npm install -g hexo
         hexo clean
         hexo g 
         hexo d
+     
