--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,9 @@ jobs:
     - name: Clone Git(cac)
       run: | # 克隆仙人掌仓库以及文章
         git clone https://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@github.com/hehysh1/blog-source.git blog-cactus
-        rm -rf /home/runner/work/blog-source/blog-cactus/source/_posts
+        cd blog-cactus
+        rm -rf source/_posts
+        cd ..
         cp -r /home/runner/work/blog-source/post /home/runner/work/blog-source/blog-cactus/source/_posts
         rm -rf /home/runner/work/blog-source/blog-source
         cd blog-cactus
