--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,11 @@ jobs:
         git clone https://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@github.com/hehysh1/blog-source.git blog-cactus
         cd blog-cactus
         rm -rf source/_posts
-        cd ..
+        cd source
+        mkdir _posts
+        cd _posts
+        pwd
+        cd /home/runner/work/blog-source/
         cp -r /home/runner/work/blog-source/post /home/runner/work/blog-source/blog-cactus/source/_posts
         rm -rf /home/runner/work/blog-source/blog-source
         cd blog-cactus
