--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,25 +40,13 @@ jobs:
       run: |
         cd ..
         npm install hexo-cli -g
-    
-    - name: Get post part
-      run: | # 复制post
-        cp -r /home/runner/work/blog-source/blog-source/source/_posts /home/runner/work/blog-source/post
         
-    - name: Clone Git(cac)
-      run: | # 克隆仙人掌仓库以及文章
-        git clone https://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@github.com/hehysh1/blog-source.git blog-cactus
-        cd blog-cactus
-        rm -rf source/_posts
-        cd source
-        mkdir /home/runner/work/blog-source/blog-cactus/source/_posts
-        cd _posts
-        pwd
-        cd /home/runner/work/blog-source/
-        cp -r /home/runner/work/blog-source/post /home/runner/work/blog-source/blog-cactus/source/_posts
-        rm -rf /home/runner/work/blog-source/blog-source
-        cd blog-cactus
-           
+    - name: Clone repo and cp posts
+      run: |
+        git clone https://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@github.com/hehysh1/blog-source.git cactus-source
+        rm -rf /home/runner/work/blog-source/cactus-source/source/_posts
+        cp -r /home/runner/work/blog-source/post /home/runner/work/blog-source/cactus-source/source/_posts
+        
     - name: Cache Modules # 缓存 Node 插件
       uses: actions/cache@v1
       id: cache-modules
