--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hexo-generator-index2": "^0.2.0",
     "hexo-generator-searchdb": "^1.4.0",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-next-darkmode": "^0.1.10",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^5.0.0",
     "hexo-renderer-stylus": "^2.1.0",
