--- a/_config.next.yml
+++ b/_config.next.yml
@@ -124,7 +124,7 @@ menu:
   archives: /archives/ || fa fa-archive
   links: /links/ || fa fa-link
   #schedule: /schedule/ || fa fa-calendar
-  #sitemap: /sitemap.xml || fa fa-sitemap
+  sitemap: /sitemap.xml || fa fa-sitemap
   #commonweal: /404/ || fa fa-heartbeat
   sec-site: /sec-site/ || fa fa-earth
   traveling: https://travellings.link || fa fa-subway
