--- a/package.json
+++ b/package.json
@@ -14,7 +14,18 @@
   "dependencies": {
     "@waline/hexo-next": "^3.0.1",
     "acorn": "^8.7.1",
+    "babel-core": "^6.26.3",
+    "babel-plugin-transform-remove-strict-mode": "^0.0.2",
+    "babel-preset-es2015": "^6.24.1",
     "check": "^1.0.0",
+    "gulp": "^4.0.2",
+    "type": "module",
+    "gulp-babel": "^7.0.1",
+    "gulp-htmlclean": "^2.7.22",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^8.0.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-uglify": "^3.0.2",
     "hexo": "^6.2.0",
     "hexo-abbrlink": "^2.2.1",
     "hexo-admin": "^2.3.0",
