--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "hexo-next-darkmode": "^0.1.10",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^5.0.0",
+    "hexo-renderer-pug": "^3.0.0",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-renderer-swig": "^1.1.0",
     "hexo-server": "^3.0.0",
